fix deprecated construction of URL